# cloud-logs-anomaly-detection

./: .gitignore  README.md  pyproject.toml  run_pipeline.bat
src/dashboard/: app.py
src/data/: fetch_real_cloudtrail.py  generate_real_attacks.py  generate_synthetic_data.py
src/models/: evaluate_isoforest.py  prepare_unsupervised.py  train_isolation_forest.py  train_models.py  train_xgboost.py  tune_models.py
src/predict/: predict_on_real.py  predict_risk.py
src/preprocessing/: preprocess_by_service.py
