[project]
name = "cloud-logs-anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "pcd team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "faker (>=40.1.2,<41.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "boto3 (>=1.42.78,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
